--- a/dualnBack/dualnBack.csproj
+++ b/dualnBack/dualnBack.csproj
@@ -71,50 +71,50 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdminFrm.cs">
+    <Compile Include="forms\AdminFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AdminFrm.Designer.cs">
+    <Compile Include="forms\AdminFrm.Designer.cs">
       <DependentUpon>AdminFrm.cs</DependentUpon>
     </Compile>
-    <Compile Include="db.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="models\db.cs" />
+    <Compile Include="forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="GameFrm.cs">
+    <Compile Include="forms\GameFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GameFrm.Designer.cs">
+    <Compile Include="forms\GameFrm.Designer.cs">
       <DependentUpon>GameFrm.cs</DependentUpon>
     </Compile>
-    <Compile Include="LoginController.cs" />
-    <Compile Include="msgForm.cs">
+    <Compile Include="controllers\LoginController.cs" />
+    <Compile Include="forms\msgForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="msgForm.Designer.cs">
+    <Compile Include="forms\msgForm.Designer.cs">
       <DependentUpon>msgForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="registerFrm.cs">
+    <Compile Include="forms\registerFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="registerFrm.Designer.cs">
+    <Compile Include="forms\registerFrm.Designer.cs">
       <DependentUpon>registerFrm.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AdminFrm.resx">
+    <EmbeddedResource Include="forms\AdminFrm.resx">
       <DependentUpon>AdminFrm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GameFrm.resx">
+    <EmbeddedResource Include="forms\GameFrm.resx">
       <DependentUpon>GameFrm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="msgForm.resx">
+    <EmbeddedResource Include="forms\msgForm.resx">
       <DependentUpon>msgForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -126,7 +126,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="registerFrm.resx">
+    <EmbeddedResource Include="forms\registerFrm.resx">
       <DependentUpon>registerFrm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
@@ -143,6 +143,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
